Dodano integrację JWT Authentication i Authorization w projekcie API

--- a/src/OcenaPracownicza.API/appsettings.json
+++ b/src/OcenaPracownicza.API/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "JwtSettings": {
+        "Issuer": "OcenaPracowniczaServer",
+        "Audience": "OcenaPracowniczaClient",
+        "Secret": "ToJestBardzoTajneHasloKtoreMaMin32Znaki!"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+
+    "AllowedHosts": "*"
 }
