najpierw login {   "username": "admin",   "password": "admin123" } potem JWT potem w przeglądarce: https://localhost:56517/login-google email: piotrunio... reszta jest na stronie https://console.cloud.google.com/ secerty w json

--- a/src/OcenaPracownicza.API/appsettings.json
+++ b/src/OcenaPracownicza.API/appsettings.json
@@ -5,6 +5,12 @@
         "Secret": "ToJestBardzoTajneHasloKtoreMaMin32Znaki!"
     },
 
+    "Authentication": {
+        "Google": {
+
+        }
+    },
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
