przeniesienie logiki do odpowiednich miejsc

--- a/src/OcenaPracownicza.API/appsettings.json
+++ b/src/OcenaPracownicza.API/appsettings.json
@@ -6,9 +6,10 @@
     },
 
     "Authentication": {
-        "Google": {
-
-        }
+      "Google": {
+          "ClientId": "931022251203-4vi3em0ersgsp2bdtf1gq1smdka1eu40.apps.googleusercontent.com",
+          "ClientSecret": "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"
+      }
     },
 
     "Logging": {
