--- a/src/OcenaPracownicza.API/appsettings.json
+++ b/src/OcenaPracownicza.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost;Database=OcenaPracownicza;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+  
     "JwtSettings": {
         "Issuer": "OcenaPracowniczaServer",
         "Audience": "OcenaPracowniczaClient",
