Integral Tests - fixed unit tests

--- a/src/OcenaPracownicza.API/appsettings.json
+++ b/src/OcenaPracownicza.API/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Database=OcenaPracownicza;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OcenaPracownicza;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   
     "JwtSettings": {
         "Issuer": "OcenaPracowniczaServer",
