--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  backend:
     name: .NET Build & Test
     runs-on: ubuntu-latest
 
@@ -28,3 +28,24 @@ jobs:
 
     - name: Test
       run: dotnet test OcenaPracownicza.sln
+  frontend:
+    name: React Build & Test
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20.x'
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: .src/ocena-pracownicza-app
+
+    - name: Test
+      run: npm test
+      working-directory: .src/ocena-pracownicza-app
+        
+    
