--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -1,3 +1,5 @@
+name: Build & Test
+
 on:
   push:
     branches: [ main ]
@@ -7,7 +9,7 @@ on:
 
 jobs:
   backend:
-    name: .NET Build & Test
+    name: .NET
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +29,7 @@ jobs:
     - name: Test
       run: dotnet test OcenaPracownicza.sln
   frontend:
-    name: React Build & Test
+    name: React
     runs-on: ubuntu-latest
 
     steps:
