--- a/src/OcenaPracownicza.API/appsettings.json
+++ b/src/OcenaPracownicza.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OcenaPracownicza;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=OcenaPracownicza;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   
     "JwtSettings": {
