--- a/.github/workflows/dotnet-ci.yaml
+++ b/.github/workflows/dotnet-ci.yaml
@@ -44,6 +44,10 @@ jobs:
       run: npm install
       working-directory: ./src/ocena-pracownicza-app
 
+    - name: Build
+      run: npm run build
+      working-directory: ./src/ocena-pracownicza-app
+
     - name: Test
       run: npm test
       working-directory: ./src/ocena-pracownicza-app
