--- a/src/ocena-pracownicza-app/package.json
+++ b/src/ocena-pracownicza-app/package.json
@@ -18,7 +18,8 @@
         "@mui/material": "^7.3.5",
         "axios": "^1.13.2",
         "react": "^19.1.1",
-        "react-dom": "^19.1.1"
+        "react-dom": "^19.1.1",
+        "react-router-dom": "^7.9.6"
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
@@ -28,6 +29,7 @@
         "@types/node": "^24.10.1",
         "@types/react": "^19.1.16",
         "@types/react-dom": "^19.1.9",
+        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^5.1.1",
         "eslint": "^9.36.0",
         "eslint-plugin-react-hooks": "^5.2.0",
@@ -39,5 +41,4 @@
         "vite": "^7.2.2",
         "vitest": "^4.0.10"
     }
-    
 }
