--- a/src/ocena-pracownicza-app/tsconfig.json
+++ b/src/ocena-pracownicza-app/tsconfig.json
@@ -15,5 +15,5 @@
         "noImplicitReturns": true,
         "skipLibCheck": true
     },
-    "include": ["tests"]
+    "include": ["src","tests"]
 }
