--- a/src/OcenaPracownicza.API/appsettings.json
+++ b/src/OcenaPracownicza.API/appsettings.json
@@ -1,20 +1,20 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=OcenaPracownicza;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=OcenaPracownicza;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  
-    "JwtSettings": {
-        "Issuer": "OcenaPracowniczaServer",
-        "Audience": "OcenaPracowniczaClient",
-        "Secret": "ToJestBardzoTajneHasloKtoreMaMin32Znaki!"
-    },
 
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
+  "JwtSettings": {
+    "Issuer": "OcenaPracowniczaServer",
+    "Audience": "OcenaPracowniczaClient",
+    "Secret": "ToJestBardzoTajneHasloKtoreMaMin32Znaki!"
+  },
 
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+
+  "AllowedHosts": "*"
 }
