--- a/src/ocena-pracownicza-app/package.json
+++ b/src/ocena-pracownicza-app/package.json
@@ -17,6 +17,7 @@
         "@mui/icons-material": "^7.3.6",
         "@mui/material": "^7.3.6",
         "axios": "^1.13.2",
+        "jwt-decode": "^4.0.0",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
         "react-router-dom": "^6.22.3"
